# rhai-extension

./: .gitignore  Cargo.toml  LICENSE  README.md  capsule.toml
contracts/rhai-extension/: Cargo.toml
contracts/rhai-extension/src/: entry.rs  error.rs
tests/src/: tests.rs
