[package]
name = "rhai-extension"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {version = "0.9.0", optional = true}
rhai = { version = "1.8.0", optional = true }
molecule = {version = "0.7.2", default_features = false, optional = true}
serde = { version = "1.0", default-features = false, features = ["derive"]  }
serde-json-core = "0.4.0"


[features]
std = []
no-std = ["ckb-std","molecule", "rhai"]